@@ -7,7 +7,7 @@
 # A copy of this file is pasted into the beginning of texi2html by
 # running './configure'.
 #
-# $Id: html.init,v 1.50 2010-06-21 07:03:15 pertusus Exp $
+# $Id: html.init,v 1.51 2010-06-22 17:09:49 karl Exp $
 
 use strict;
 
@@ -314,7 +314,7 @@ t2h_default_push_handler(\&html_default_do_title, \@command_handler_output);
 # Following   -- following node in node reading order, taking menu into account
 # Forward     -- next node in reading order
 # Back        -- previous node in reading order
-# Up          -- parent given by sectionning commands
+# Up          -- parent given by sectioning commands
 # FastForward -- if leave node, up and next, else next node
 # FastBackward-- if leave node, up and prev, else prev node
 #
